--- a/html+css/水平垂直居中.html
+++ b/html+css/水平垂直居中.html
@@ -70,7 +70,7 @@
           vertical-align: middle;
           border: 1px solid #000;
         }
-      .innerBox{
+      #center4{
         	display: inline-block;
         	background-color: lightblue;
         	width: 200px;
@@ -98,9 +98,9 @@
       </div>
   </div>
 
-	<div class = "outerBox table">
+	<div class = "table">
 		<div class = "tableCell">
-			<p class="innerBox">水平垂直居中布局方法四</p>
+			<p id="center4">水平垂直居中布局方法四</p>
 		</div>
 	</div>
 </body>
